--- a/clubtalk/page/templates/page/post_list.html
+++ b/clubtalk/page/templates/page/post_list.html
@@ -10,7 +10,7 @@
         <p>If you have any questions please contact tigertalk@princeton.edu</p>
     <br /> 
     <br /> 
-    <h2><a href="http://127.0.0.1:8000/clublist">Click here to check out all Princeton clubs</a></h2>
+    <h2><a href="{% url 'post_list_full' %}">Click here to check out all Princeton clubs</a></h2>
 </center>
 </body>
 {% endblock %}
