--- a/clubtalk/page/templates/page/post_list_full.html
+++ b/clubtalk/page/templates/page/post_list_full.html
@@ -1,6 +1,12 @@
 {% extends 'page/base.html' %}
 
 {% block content %}
+<body>
+    <form action="/search/" method="get">
+        <input type="text" name="q">
+        <input type="submit" value="Search">
+    </form>
+</body>
 <center>
     <body>
     {% for club in clubs %}
