--- a/clubtalk/page/templates/page/search_results.html
+++ b/clubtalk/page/templates/page/search_results.html
@@ -2,7 +2,13 @@
 
 {% block content %}
 
-<html>     
+<html>
+<body>
+    <form action="/search/" method="get">
+        <input type="text" name="q">
+        <input type="submit" value="Search">
+    </form>
+</body>     
     <head>         
     <title>Club Search</title>     
     </head>     
