--- a/clubtalk/page/templates/page/post_list.html
+++ b/clubtalk/page/templates/page/post_list.html
@@ -11,47 +11,41 @@
     <br /> 
     <br /> 
     <h2><a href="{% url 'post_list_full' %}">Click here to check out all Princeton clubs</a></h2>
-    <html>
-<head>
-    <title>Search</title>
-</head>
-
     <form action="/search/" method="get">
         <input type="text" name="q">
         <input type="submit" value="Search">
     </form>
 
-	  <div class="dropdown show">
-		  <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+	<div class="dropdown show">
+		<a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 		    Filter by Category
-		  </a>
+		</a>
 
-		 	<div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-			    <a class="dropdown-item" href="#">A Capella</a>
-			    <a class="dropdown-item" href="#">Academic</a>
-			    <a class="dropdown-item" href="#">Career Opportunity</a>
-			    <a class="dropdown-item" href="#">Cultural</a>
-			    <a class="dropdown-item" href="#">Dance</a>
-			    <a class="dropdown-item" href="#">Educational</a>
-			    <a class="dropdown-item" href="#">Environmental</a>
-			    <a class="dropdown-item" href="#">Games</a>
-			    <a class="dropdown-item" href="#">Media</a>
-			    <a class="dropdown-item" href="#">Music</a>
-			    <a class="dropdown-item" href="#">Performing Arts</a>
-			    <a class="dropdown-item" href="#">Political</a>
-			    <a class="dropdown-item" href="#">Publication</a>
-			    <a class="dropdown-item" href="#">Religious</a>
-			    <a class="dropdown-item" href="#">Service</a>
-			    <a class="dropdown-item" href="#">Academic</a>
-			    <a class="dropdown-item" href="#">Social</a>
-			    <a class="dropdown-item" href="#">Special Interest</a>
-			    <a class="dropdown-item" href="#">Theater</a>
-		  	</div>
+		<div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+			<a class="dropdown-item" href="#">A Capella</a>
+			<a class="dropdown-item" href="#">Academic</a>
+			<a class="dropdown-item" href="#">Career Opportunity</a>
+			<a class="dropdown-item" href="#">Cultural</a>
+			<a class="dropdown-item" href="#">Dance</a>
+			<a class="dropdown-item" href="#">Educational</a>
+			<a class="dropdown-item" href="#">Environmental</a>
+			<a class="dropdown-item" href="#">Games</a>
+			<a class="dropdown-item" href="#">Media</a>
+			<a class="dropdown-item" href="#">Music</a>
+			<a class="dropdown-item" href="#">Performing Arts</a>
+			<a class="dropdown-item" href="#">Political</a>
+			<a class="dropdown-item" href="#">Publication</a>
+			<a class="dropdown-item" href="#">Religious</a>
+			<a class="dropdown-item" href="#">Service</a>
+			<a class="dropdown-item" href="#">Academic</a>
+			<a class="dropdown-item" href="#">Social</a>
+			<a class="dropdown-item" href="#">Special Interest</a>
+			<a class="dropdown-item" href="#">Theater</a>
 		</div>
-
-</body>
-</html>
-</center>
+	</div>
+	<br />
+	<br />
+	<h2><a href="{% url 'login' %}">Click here to login</a></h2>
 </body>
 {% endblock %}
                 
