--- a/clubtalk/page/templates/page/post_detail.html
+++ b/clubtalk/page/templates/page/post_detail.html
@@ -2,6 +2,10 @@
 {% load templatetags %}
 
 {% block content %}
+<head>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head>
 <body>
     <form action="/search/" method="get">
         <input type="text" name="q">
@@ -36,24 +40,38 @@
         	{% endif %}
             <br />
 
-            <h2>Reviews </h2>
-            {% for review in club.reviews.all %}
-            <div class="panel panel-default">
-                <div class="panel-heading">Review</div>
-                <div class="panel-body">
-                    <p><b>Fun?</b> {{ review.fun }}</p>
-                    <p><b>Meaningful?</b> {{ review.meaningful }}</p>
-                    <p><b>Stars:</b> {{ review.stars }}</p>
-                    <br />
-                    <p><b>Review:</b> {{ review.text }}</p>
-                    <p><b>Could be improved:</b> {{ review.CBI }}</p>
-                    <br />
-                    <p><b>Upvotes/downvotes:</b> {{ review.review }}</p>
-                </div>
+            <ul class="nav nav-tabs" id="myTab" role="tablist">
+              <li class="nav-item">
+                <a class="nav-link" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Reviews</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Interview Comments</a>
+              </li>
+            </ul>
+            <div class="tab-content" id="myTabContent">
+              <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+                <a href="{% url 'post_new' pk=club.pk %}"{{club.name}}>Submit a review here!</a>
+                  {% for review in club.reviews.all %}
+                    <div class="panel panel-default">
+                        <div class="panel-heading">Review</div>
+                        <div class="panel-body">
+                            <p><b>Fun?</b> {{ review.fun }}</p>
+                            <p><b>Meaningful?</b> {{ review.meaningful }}</p>
+                            <p><b>Stars:</b> {{ review.stars }}</p>
+                            <br />
+                            <p><b>Review:</b> {{ review.text }}</p>
+                            <p><b>Could be improved:</b> {{ review.CBI }}</p>
+                            <br />
+                            <p><b>Upvotes/downvotes:</b> {{ review.review }}</p>
+                        </div>
+                    </div>
+                    {% endfor %}
+              </div>
+              <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+                    THIS IS WHERE INTERVIEW STUFF WILL GO
+              </div>
             </div>
-            {% endfor %}
 
-            <a href="{% url 'post_new' pk=club.pk %}"{{club.name}}>Submit a review here!</a>
     	</body>	
     </div>
 {% endblock %}
