--- a/clubtalk/page/templates/page/post_list.html
+++ b/clubtalk/page/templates/page/post_list.html
@@ -1,12 +1,14 @@
 {% extends 'page/base.html' %}
 
 {% block content %}
+
 <style>
 .content {
     max-width: 500px;
     margin: auto;
 }
 </style>
+
 <body>
     <center>
     <br />
@@ -15,6 +17,7 @@
 	        <br />
 	        <p>Scroll below for information on all of Princeton's clubs!</p>
 	        <p>If you have any questions please contact tigertalk@princeton.edu</p>
+
     </div>
     <br /> 
     <br /> 
@@ -25,6 +28,41 @@
 	        <input type="text" name="q">
 	        <input type="submit" value="Search">
 	    </form>
+	</div>
+
+	<div class="category">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+
+
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/css/bootstrap-select.min.css">
+
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/js/bootstrap-select.min.js"></script>
+		<select class="selectpicker" data-style="btn-warning">
+				<option>All Categories</option>
+	  			<option>A Capella</option>
+	 			<option>Academic</option>
+	 			<option>Career Opportunity</option>
+	 			<option>Cultural</option>
+	 			<option>Dance</option>
+	 			<option>Educational</option>
+	 			<option>Environmental</option>
+	 			<option>Games</option>
+	 			<option>Media</option>
+	 			<option>Music</option>
+	 			<option>Performing Arts</option>
+	 			<option>Political</option>
+	 			<option>Publication</option>
+	 			<option>Religious</option>
+	 			<option>Service</option>
+	 			<option>Academic</option>
+	 			<option>Social</option>
+	 			<option>Special Interest</option>
+	 			<option>Theater</option>
+			</select>
 	</div>
 
 	<div class="dropdown show">
@@ -58,6 +96,7 @@
 	<br />
 	<h2><a href="{% url 'login' %}">Click here to login</a></h2>
 </center>
+
 </body>
 {% endblock %}
                 
