--- a/clubtalk/page/templates/page/post_detail.html
+++ b/clubtalk/page/templates/page/post_detail.html
@@ -11,47 +11,43 @@
         <input type="text" name="q">
         <input type="submit" value="Search">
     </form>
-</body>
     <div class="post">
         <center><h1>{{ club.name }}</h1>
         <p>{{ club.desc }}</p></center>
         <br />
         <h2># Reviews: {{review_count}}</h2>
         {% if review_count %}
-        <h2>Fun count: {{fun_count}}/{{review_count}}</h2>
+            <h2>Fun count: {{fun_count}}/{{review_count}}</h2>
         {% endif %}
         {% if review_count %}
-        <h2>Meaningful count: {{mean_count}}/{{review_count}}</h2>
+            <h2>Meaningful count: {{mean_count}}/{{review_count}}</h2>
         {% endif %}
         {% if review_count %}
-        <h2>STARS: {{star_count}}/5</h2>
+            <h2>STARS: {{star_count}}/5</h2>
         {% endif %}
         <br />
-        <body>
-        	{% for leader in club.leaders.all %}
-        		<p><b>{{leader.title}}:</b> <a href={{ leader.email|mail }}>{{ leader.name }}</a></p>
-        	{% endfor %}
-        	<p><b>Category:</b> 
-        	{{ club.category.all|join:", " }}
-        	</p>
-         	<p><b>Contact:</b> <a href={{ club.email|mail }}>{{club.email}}</a></p>
-        	{% if club.website %}
-        		<p><b>Website:</b> <a href={{ club.website }}> {{ club.website }}</a></p>
-        	{% endif %}
-            <br />
+        {% for leader in club.leaders.all %}
+            <p><b>{{leader.title}}:</b> <a href={{ leader.email|mail }}>{{ leader.name }}</a></p>
+        {% endfor %}
+        <p><b>Category:</b> {{ club.category.all|join:", " }} </p>
+        <p><b>Contact:</b> <a href={{ club.email|mail }}>{{club.email}}</a></p>
+        {% if club.website %}
+            <p><b>Website:</b> <a href={{ club.website }}> {{ club.website }}</a></p>
+        {% endif %}
+        <br />
 
-            <ul class="nav nav-tabs" id="myTab" role="tablist">
-              <li class="nav-item">
-                <a class="nav-link" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Reviews</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Interview Comments</a>
-              </li>
-            </ul>
-            <div class="tab-content" id="myTabContent">
-              <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+        <ul class="nav nav-tabs" id="myTab" role="tablist">
+            <li class="nav-item">
+            <a class="nav-link" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Reviews</a>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Interview Comments</a>
+            </li>
+        </ul>
+        <div class="tab-content" id="myTabContent">
+            <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
                 <a href="{% url 'post_new' pk=club.pk %}"{{club.name}}>Submit a review here!</a>
-                  {% for review in club.reviews.all %}
+                {% for review in club.reviews.all %}
                     <div class="panel panel-default">
                         <div class="panel-heading">Review</div>
                         <div class="panel-body">
@@ -65,13 +61,12 @@
                             <p><b>Upvotes/downvotes:</b> {{ review.review }}</p>
                         </div>
                     </div>
-                    {% endfor %}
-              </div>
-              <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-                    THIS IS WHERE INTERVIEW STUFF WILL GO
-              </div>
+                {% endfor %}
             </div>
-
-    	</body>	
+            <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+                THIS IS WHERE INTERVIEW STUFF WILL GO
+            </div>
+        </div>
     </div>
+</body>	
 {% endblock %}
