--- a/clubtalk/page/templates/page/base.html
+++ b/clubtalk/page/templates/page/base.html
@@ -28,8 +28,8 @@
                 <h1><a href="/"><b>TigerTalk</b></a></h1>
                 <nav id="nav">
                     <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="left-sidebar.html">All clubs</a></li>
+                        <li><a href="/">Home</a></li>
+                        <li><a href="{% url 'post_list_full' %}">All clubs</a></li>
                         <li><a href="right-sidebar.html">Top 20</a></li>
                         <li><a href="no-sidebar.html">About us!</a></li>
                         <li><a href="#" class="button special">Log in</a></li>
