CSS added to reviews

--- a/clubtalk/page/templates/page/index.html
+++ b/clubtalk/page/templates/page/index.html
@@ -10,6 +10,7 @@
 	<body id ="top">
 		<!-- Banner -->
 			<section id="banner">
+				<center>
 				<div class="inner">
 					<h2>TigerTalk</h2>
 					<p>Welcome to TigerTalk! Search for a club below.</p>
@@ -23,6 +24,7 @@
 					</ul>
 
 				</div>
+				</center>
 			</section>
 		<!-- One -->
 			<section id="one" class="wrapper style1">
