--- a/clubtalk/page/static/css/style.css
+++ b/clubtalk/page/static/css/style.css
@@ -44,7 +44,7 @@
 		margin: 0 0 2em 0;
 	}
 
-	h1, h2, h3, h4, h5, h6 {
+	h1, h2, h3, h4 {
 		color: #666f77;
 		font-weight: 300;
 		line-height: 1em;
@@ -53,7 +53,23 @@
 		letter-spacing: 0.125em;
 	}
 
-		h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
+	h6 {
+		color: black;
+		font-weight: bold;
+		line-height: 1em;
+		margin: -1em 0 .5em -1em;
+		letter-spacing: 0.125em;
+	}
+
+	h5 {
+		color: black;
+		font-weight: bold;
+		line-height: 1em;
+		margin: -1em 0 .5em -1em;
+		letter-spacing: 0.125em;
+	}
+
+		h1 a, h2 a, h3 a, h4 a {
 			color: inherit;
 			text-decoration: none;
 		}
@@ -74,12 +90,12 @@
 	}
 
 	h5 {
-		font-size: 0.9em;
+		font-size: 0.8em;
 		line-height: 1.5em;
 	}
 
 	h6 {
-		font-size: 0.7em;
+		font-size: 1em;
 		line-height: 1.5em;
 	}
 
@@ -151,7 +167,12 @@
 /* Section/Article */
 
 	section.special, article.special {
-		text-align: center;
+		text-align: left;
+	}
+
+	section.special, article.special h3 {
+		color: black;
+		border-width: thick;
 	}
 
 	header p {
@@ -175,7 +196,7 @@
 	header h4 + p,
 	header h5 + p,
 	header h6 + p {
-		font-size: 0.9em;
+		font-size: 0.95m;
 		margin-top: -0.75em;
 		line-height: 1.5em;
 	}
@@ -398,7 +419,9 @@
 		border-radius: 6px;
 		border: solid 1px rgba(144, 144, 144, 0.25);
 		margin-bottom: 2em;
-		padding: 3em 2em;
+		margin: 0em .5em 2em .5em;
+		padding: 0em 1.5em 1.5em 1.5em;
+		width: 60em;
 	}
 
 		.box > :last-child,
@@ -436,17 +459,69 @@
 
 		.icon.major {
 			display: inline-block;
-			margin: 0 0 1.25em 0;
+			margin: -.5em 0 1.25em 0;
 			color: #ffffff;
 			background: #629DD1;
-			width: 3em;
-			height: 3em;
+			width: 2em;
+			height: 2em;
+			margin-right: .65em;
 			font-size: 2em;
 			text-align: center;
-			line-height: 3em;
+			line-height: 2em;
 			border-radius: 100%;
 			box-shadow: 0 0 0 10px #fff, 0 0 0 11px rgba(144, 144, 144, 0.25);
 		}
+
+		.icon.major1 {
+			display: inline-block;
+			margin: -.5em 0 1.25em 0;
+			color: #ffffff;
+			background: #7CFC00;
+			width: 3em;
+			height: 2em;
+			margin-right: 0em;
+			font-size: 2em;
+			font-family: Arial; 
+			border-radius: 10%;
+			text-align: center;
+			line-height: 2em;
+		}
+
+		.button1 {
+		    background-color: #4CAF50; /* Green */
+		    border: none;
+		    color: black;
+		    border: solid;
+		    border-color: #A0A0A0;
+		    width: 6em;
+		    padding: 20px 32px;
+		    border-radius: 7%;
+		    margin-top: -30px;
+		    margin-right: 7px;
+		    margin-left: 0px;
+		    text-align: center;
+		    text-decoration: none;
+		    display: inline-block;
+		    font-size: 16px;
+		}
+
+		.button2 {
+		    background-color: #F0F8FF; /* Green */
+		    border: solid;
+		    border-color: #A0A0A0;
+		    color: black;
+		    width: 6em;
+		    padding: 20px 32px;
+		    border-radius: 7%;
+		    margin-top: -30px;
+		    margin-right: 2px;
+		    margin-left: 4px;
+		    text-align: center;
+		    text-decoration: none;
+		    display: inline-block;
+		    font-size: 16px;
+		}
+
 
 /* Image */
 
@@ -1011,7 +1086,6 @@
 			z-index: 1;
 			background: rgba(255, 255, 255, .8) !important;
 			width: 700px;
-			left: 300px;
 			text-align: center;
 		}
 
