--- a/clubtalk/page/templates/page/base.html
+++ b/clubtalk/page/templates/page/base.html
@@ -16,9 +16,8 @@
         <script src="{% static 'js/skel.min.js' %}"></script>
         <script src="{% static 'js/skel-layers.min.js' %}"></script>
         <script src="{% static 'js/init.js' %}"></script>
-            <link rel="stylesheet" href="{% static 'css/skel.css' %}">
-            <link rel="stylesheet" href="{% static 'css/style.css' %}">
-            <link rel="stylesheet" href="{% static 'css/style-xlarge.css' %}">
+            <link rel="stylesheet" href="{% static 'css/normalize.css' %}">
+            <link rel="stylesheet" href="{% static 'css/skeleton.css' %}">
         
     </head>
     <body id="top">
