radio button changes

--- a/clubtalk/page/templates/page/post_detail.html
+++ b/clubtalk/page/templates/page/post_detail.html
@@ -54,7 +54,7 @@
             <br>
             <br>
         </div>
-        <h3>Leave a review!</h3>
+        <h3><a class="button button-primary" href="{% url 'post_new' pk=club.pk %}">Leave a review!</a></h3>
         {% endif %}
     </div>
     <div class="container">
