--- a/clubtalk/page/static/css/skeleton.css
+++ b/clubtalk/page/static/css/skeleton.css
@@ -596,15 +596,15 @@ there.
 
   input[type="checkbox"],
   input[type="radio"] {
-    -moz-appearance: none;
-    -webkit-appearance: none;
-    -o-appearance: none;
-    -ms-appearance: none;
-    appearance: none;
-    display: block;
+    -moz-appearance: radio;
+    -webkit-appearance: radio;
+    -o-appearance: radio;
+    -ms-appearance: radio;
+    appearance: radio;
+    display: inline-block;
     float: left;
-    margin-right: -2em;
-    opacity: 0;
+    margin-right: 0.5em;
+    opacity: 100;
     width: 1em;
     z-index: -1;
   }
