--- a/clubtalk/page/templates/page/index.html
+++ b/clubtalk/page/templates/page/index.html
@@ -14,8 +14,8 @@
 					<div class="row">
 						<div class="sixteen columns">
 							<div class="inner">
-								<h2>TigerTalk</h2>
-								<p>Welcome to TigerTalk! Search for a club below.</p>
+								<h2>ClubTalk</h2>
+								<p>Welcome to ClubTalk! Search for a club below.</p>
 								<form action="/search/" method="get">
 									<b>Filter Groups By Category:</b> <br>
 									<select id="type" name="type">
