--- a/clubtalk/page/templates/page/base.html
+++ b/clubtalk/page/templates/page/base.html
@@ -7,7 +7,7 @@
 -->
 <html>
     <head>
-        <title>TigerTalk Princeton</title>
+        <title>ClubTalk Princeton</title>
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
         <meta name="description" content="" />
         <meta name="keywords" content="" />
@@ -24,7 +24,7 @@
 
         <!-- Header -->
         <header id="header" class="skel-layers-fixed">
-            <h1><a href="/"><b>TigerTalk</b></a></h1>
+            <h1><a href="/"><b>ClubTalk</b></a></h1>
             <nav id="nav">
                 <ul>
                     <li><a href="/">Home</a></li>
