--- a/clubtalk/page/templates/page/index.html
+++ b/clubtalk/page/templates/page/index.html
@@ -17,7 +17,7 @@
 								<h2>ClubTalk</h2>
 								<p>Welcome to ClubTalk! Search for a club below.</p>
 								<form action="/search/" method="get">
-									<b>Filter Groups By Category:</b> <br>
+									<b>Filter Clubs By Category:</b> <br>
 									<select id="type" name="type">
 								     	<option value="%">All</option>
 										<option value="17">A Cappella</option>
